@startuml

class ResModel {

}

class BindCreatorProxy {
    - mStringElementMap:HashMap<String,VariableElement>
    - mResModelVariableElementMap:HashMap<ResModel, VariableElement>

    + putElement(String string, VariableElement element)
    + putElement(ResModel string, VariableElement element)
    + generatorJavaCode():TypeSpec
}

abstract class AbstractProcessor
abstract class BaseProcessor {
    + getSupportedSourceVersion()
    + init()
}
class BindViewProcessor {
    + getSupportedAnnotationTypes(): Set<String>
    + process()
    - assembleAnnotations()
    - processAnnotations()
    - getBindViewResId()
    - genCodeAuto()
}


BindViewProcessor -up-|> BaseProcessor : extends
BaseProcessor -up-|> AbstractProcessor : extends

BindCreatorProxy <.. BindViewProcessor : dependence
BindCreatorProxy *--up- ResModel : composition

BindViewProcessor *--left- BindView : composition
BindViewProcessor *--right- BindString : composition

annotation BindView
annotation BindString

@enduml